--- a/index.html
+++ b/index.html
@@ -151,26 +151,14 @@
 
         // Elementos do DOM
         const speedRange = document.getElementById('speedRange');
-        const speedValueDisplay = document.getElementById('speedValue');
-        // ... (resto dos getElementById)
-        const syncRange = document.getElementById('syncRange');
-        const syncValueDisplay = document.getElementById('syncValue');
-        const volumeRange1 = document.getElementById('volumeRange1');
-        const volumeRange2 = document.getElementById('volumeRange2');
-        const prevVideoButton = document.getElementById('prevVideoButton');
-        const nextVideoButton = document.getElementById('nextVideoButton');
-        const playPauseButton = document.getElementById('playPauseButton');
-        const prevPlaylistButton = document.getElementById('prevPlaylistButton');
-        const nextPlaylistButton = document.getElementById('nextPlaylistButton');
-        const currentPlaylistNameDisplay = document.getElementById('currentPlaylistName');
-        const appContainer = document.getElementById('app-container');
-        const messageModal = document.getElementById('messageModal');
+        // ... (todos os outros getElementById que você já tem)
         const modalMessageText = document.getElementById('modalMessageText');
+        const messageModal = document.getElementById('messageModal');
         const modalCloseButton = document.getElementById('modalCloseButton');
         const player1Container = document.getElementById('player1-container');
         const player2Container = document.getElementById('player2-container');
-        const openYouTubeButton1 = document.getElementById('openYouTube1');
-        const openYouTubeButton2 = document.getElementById('openYouTube2');
+        const playPauseButton = document.getElementById('playPauseButton');
+        // ... etc.
 
         const PLAYLIST_PAIRS = [
             { name: "Canal Mix 1", p1: "PL7inlxn_ITUdfVKCmcUTI8MX0aBGb54R1", p2: "PLuM5GSpnFsFjtu-0tzNxU-oWiDNtGWvD2", videos1: [], videos2: [] },
@@ -181,20 +169,21 @@
         let player1, player2;
         let currentPlaylistPairIndex = 0;
         let currentVideoIndices = [0, 0];
+        // ... (outras variáveis de estado)
+        let isLoadingPlaylist = false;
+        let playersReady = { p1: false, p2: false };
+        let playersEnded = { p1: false, p2: false };
         let globalSpeed = 1.0;
         let globalSyncOffset = 0.0;
         let isPlaying = false;
-        let playersReady = { p1: false, p2: false };
-        let playersEnded = { p1: false, p2: false };
-        let isLoadingPlaylist = false;
+
 
         function showMessage(message, isError = false) { /* ... (código existente) ... */ }
         if (modalCloseButton) { /* ... (código existente) ... */ }
-        function updateButtonStates() { /* ... (código existente) ... */ }
+        function updateButtonStates() { /* ... (código existente, certifique-se que todos os botões referenciados estão definidos acima) ... */ }
 
         function onYouTubeIframeAPIReady() {
             console.log("[FRONTEND] YouTube API Pronta. Criando players...");
-            // ... (código existente para criar players)
             const playerWidth = player1Container.offsetWidth;
             const playerHeight = player1Container.offsetHeight;
             const pageOrigin = window.location.origin; 
@@ -207,38 +196,57 @@
             try {
                 player1 = new YT.Player('player1', {
                     height: playerHeight, width: playerWidth, playerVars: { ...commonPlayerVars },
-                    events: { 'onReady': onPlayer1Ready, 'onStateChange': onPlayer1StateChange, 'onError': (e) => onPlayerError('Player 1', e, 0) } // Passa o índice do player
+                    events: { 'onReady': onPlayer1Ready, 'onStateChange': onPlayer1StateChange, 'onError': (e) => onPlayerError('Player 1', e, 0) }
                 });
                 player2 = new YT.Player('player2', {
                     height: playerHeight, width: playerWidth, playerVars: { ...commonPlayerVars },
-                    events: { 'onReady': onPlayer2Ready, 'onStateChange': onPlayer2StateChange, 'onError': (e) => onPlayerError('Player 2', e, 1) } // Passa o índice do player
+                    events: { 'onReady': onPlayer2Ready, 'onStateChange': onPlayer2StateChange, 'onError': (e) => onPlayerError('Player 2', e, 1) }
                 });
-            } catch (error) { /* ... */ }
+            } catch (error) { console.error("[FRONTEND] Erro EXCEPCIONAL ao criar YT.Player:", error); /* ... */ }
         }
 
-        // MODIFICADO: onPlayerError agora tenta carregar o próximo vídeo do player que falhou
-        function onPlayerError(playerName, event, playerIndex) { // playerIndex: 0 para player1, 1 para player2
+        function onPlayerError(playerName, event, playerIndex) {
             console.error(`[FRONTEND] ${playerName} Erro YT: Código ${event.data}. Evento:`, event);
             showMessage(`${playerName} erro ao carregar vídeo (YT: ${event.data}). Tentando próximo...`, true);
 
-            const errorCodesToSkip = [2, 5, 100, 101, 150]; // Erros comuns que indicam problema com o vídeo específico
+            const errorCodesToSkip = [2, 5, 100, 101, 150]; 
             if (errorCodesToSkip.includes(event.data)) {
-                console.log(`[FRONTEND] Erro ${event.data} no ${playerName}. Tentando avançar para o próximo vídeo desse player.`);
+                console.log(`[FRONTEND] Erro ${event.data} no ${playerName} (playerIndex ${playerIndex}). Tentando avançar.`);
+                
                 const currentPair = PLAYLIST_PAIRS[currentPlaylistPairIndex];
                 let videoList;
-                if (playerIndex === 0) videoList = currentPair.videos1;
-                else videoList = currentPair.videos2;
+                let otherPlayerVideoIndex;
 
-                if (videoList && currentVideoIndices[playerIndex] < videoList.length - 1) {
-                    currentVideoIndices[playerIndex]++; // Avança o índice SÓ para este player
+                if (playerIndex === 0) { // Erro no Player 1
+                    videoList = currentPair.videos1;
+                    otherPlayerVideoIndex = currentVideoIndices[1]; // Mantém o índice do Player 2
+                } else { // Erro no Player 2
+                    videoList = currentPair.videos2;
+                    otherPlayerVideoIndex = currentVideoIndices[0]; // Mantém o índice do Player 1
+                }
+
+                // Log detalhado ANTES de tentar avançar
+                console.log(`[FRONTEND] onPlayerError - ${playerName}:`);
+                console.log(`  - playerIndex: ${playerIndex}`);
+                console.log(`  - currentVideoIndices ANTES: [${currentVideoIndices[0]}, ${currentVideoIndices[1]}]`);
+                console.log(`  - videoList existe: ${!!videoList}`);
+                if (videoList) {
+                    console.log(`  - videoList.length: ${videoList.length}`);
+                }
+
+                if (videoList && videoList.length > 0 && currentVideoIndices[playerIndex] < videoList.length - 1) {
+                    currentVideoIndices[playerIndex]++; 
                     console.log(`[FRONTEND] Novo índice para ${playerName} (playerIndex ${playerIndex}): ${currentVideoIndices[playerIndex]}`);
-                    loadCurrentVideos(isPlaying); // Recarrega os vídeos (o outro player continuará com seu vídeo atual)
+                    // Ao recarregar, precisamos garantir que o outro player não seja afetado desnecessariamente
+                    // ou que ele recarregue seu vídeo atual para manter a sincronia se desejado.
+                    // Por simplicidade agora, vamos chamar loadCurrentVideos que recarrega ambos.
+                    loadCurrentVideos(isPlaying); 
                 } else {
-                    console.log(`[FRONTEND] ${playerName} no último vídeo ou lista vazia. Não é possível avançar.`);
-                    // Poderia limpar o player aqui se desejado:
-                    // if (playerIndex === 0 && player1) player1.cueVideoById('');
-                    // if (playerIndex === 1 && player2) player2.cueVideoById('');
-                    updateButtonStates(); // Atualiza botões caso este player não tenha mais vídeos
+                    console.log(`[FRONTEND] ${playerName} no último vídeo da sua lista ou lista vazia. Não é possível avançar mais para este player.`);
+                    // Opcional: limpar o player que falhou
+                    if (playerIndex === 0 && player1 && typeof player1.cueVideoById === 'function') player1.cueVideoById('');
+                    if (playerIndex === 1 && player2 && typeof player2.cueVideoById === 'function') player2.cueVideoById('');
+                    updateButtonStates(); 
                 }
             }
         }
