--- a/index.html
+++ b/index.html
@@ -388,14 +388,16 @@
             const pair = PLAYLIST_PAIRS[currentPlaylistPairIndex];
             const videoId = pair.videos1 && pair.videos1.length > currentVideoIndices[0] ? pair.videos1[currentVideoIndices[0]] : null;
             if (videoId) {
-                window.open(`https://www.youtube.com/watch?v=uBLpOm8d3a0?v=$${videoId}`, '_blank'); // CORRIGIDO
+                // CORRIGIDO: Usar template literal corretamente para inserir o videoId
+                window.open(`https://www.youtube.com/pagead/viewthroughconversion/962985656/?backend=innertube&cname=56&cver=20250514&foc_id=uAXFkgsw1L7xaCfnd5JJOw&label=followon_view&ptype=no_rmkt&random=741591490{videoId}`, '_blank'); 
             } else { showMessage("Nenhum vídeo carregado no player 1 para abrir.", true); }
         });
         if(openYouTubeButton2) openYouTubeButton2.addEventListener('click', () => {
             const pair = PLAYLIST_PAIRS[currentPlaylistPairIndex];
             const videoId = pair.videos2 && pair.videos2.length > currentVideoIndices[1] ? pair.videos2[currentVideoIndices[1]] : null;
             if (videoId) {
-                window.open(`https://www.youtube.com/watch?v=uBLpOm8d3a0?v=$${videoId}`, '_blank'); // CORRIGIDO
+                // CORRIGIDO: Usar template literal corretamente para inserir o videoId
+                window.open(`https://www.youtube.com/pagead/viewthroughconversion/962985656/?backend=innertube&cname=56&cver=20250514&foc_id=uAXFkgsw1L7xaCfnd5JJOw&label=followon_view&ptype=no_rmkt&random=741591490{videoId}`, '_blank');
             } else { showMessage("Nenhum vídeo carregado no player 2 para abrir.", true); }
         });
 
